--- a/frontend/private/cadastroPedido.html
+++ b/frontend/private/cadastroPedido.html
@@ -15,29 +15,48 @@
       href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/styles/style.css" />
-    <script src="../public/iconEffect.js" defer></script>
-    <title>Registrar Pedido</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script src="iconEffect.js" defer></script>
+    <title>Cadatrar Pedido</title>
   </head>
   <body>
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid d-flex justify-content-between">
+      <div class="container-fluid d-flex w-100 justify-content-between">
         <div class="divTopo">
-          <a
-            class="navbar-brand d-flex align-items-center"
-            href="../public/index.html"
+          <a class="navbar-brand d-flex align-items-center" href="./index.html"
             ><img
-              src="../public/assets/reading.png"
+              src="./assets/reading.png"
               style="width: 45px"
               alt="brand do site Livrare"
             />
             <span class="brand ms-2">LIVRARE</span></a
           >
         </div>
-        <div class="collapse navbar-collapse justify-content-end">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item me-2">
-              <a class="nav-link" href="">Solicitar</a>
+              <a class="nav-link" href="./cadastroUsuario.html"
+                >Cadastrar Cliente</a
+              >
+            </li>
+            <li class="nav-item me-2">
+              <a class="nav-link" href="./cadastroPedido.html"
+                >Cadastrar Pedido</a
+              >
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="">Perfil</a>
@@ -46,7 +65,7 @@
               <a id="loginLink" class="nav-link" href="./login.html"
                 ><img
                   id="iconLogout"
-                  src="../public/assets/logout.png"
+                  src="./assets/logout.png"
                   width="20px"
                   alt="sair icon"
                 /><span class="ms-2">Sair</span></a
@@ -58,8 +77,8 @@
     </nav>
     <h2 class="ps-3 mt-3">CADASTRAR PEDIDO</h2>
 
-    <div class="container d-block">
-      <div class="form mt-1">
+    <div id="container" class="container d-block">
+      <div id="divMenu" class="form mt-1">
         <form id="formPedido" class="row g-3 needs-validation" novalidate>
           <div class="form-input mb-2 col-md-4">
             <label for="sigla" class="form-label">CPF do Cliente:</label>
@@ -73,6 +92,7 @@
               maxlength="14"
               required
             />
+            <div class="invalid-feedback">Campo obrigatório</div>
           </div>
           <div class="form-input mb-2 col-md-8">
             <label for="nomeUsuario" class="form-label">Nome Completo:</label>
@@ -85,63 +105,65 @@
               disabled="disabled"
             />
           </div>
-
+          <div class="form-input mb-3 col-md-6 d-none">
+            <label for="id" class="form-label">Cód Livro:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="id"
+              value=""
+              aria-label="codigo do livro"
+            />
+            <div class="invalid-feedback">Campo obrigatório</div>
+          </div>
           <div class="form-input mb-3 col-md-6">
-            <label for="nomeUsuario" class="form-label">Título do Livro:</label>
+            <label for="tituloLivro" class="form-label">Título do Livro:</label>
             <input
               type="text"
               class="form-control"
               id="tituloLivro"
-              pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$"
               placeholder="Digite o título do livro."
               aria-label="titulo do livro"
               required
             />
+            <div class="invalid-feedback">Campo obrigatório</div>
           </div>
           <div class="form-input mb-3 col-md-6">
-            <label for="nomeUsuario" class="form-label">Autor:</label>
+            <label for="autorLivro" class="form-label">Autor:</label>
             <input
               type="text"
               class="form-control"
               id="autorLivro"
-              pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$"
               placeholder="Digite o autor do livro."
               aria-label="autor do livro"
               required
             />
+            <div class="invalid-feedback">Campo obrigatório</div>
+          </div>
+          <div id="invalidForm" class="invalid-feedback">
+            *É necessário preencher todos os campos obrigatórios
           </div>
           <div class="col-12">
             <button id="btnBuscar" class="btn btn-primary" type="submit">
               Cadastrar
             </button>
-            <button
-              id="btnAtualizar"
-              class="btn btn-secondary"
-              type="button"
-              disabled="disabled"
-            >
-              Cancelar
+            <button id="btnAtualizar" class="btn btn-secondary" type="button">
+              Atualizar
             </button>
             <button id="btnReset" class="btn btn-secondary" type="button">
               Reset
             </button>
           </div>
         </form>
-        <div
-          class="alert alert-success text-center mt-3 visually-hidden"
-          id="alert"
-          role="alert"
-        >
-          Pedido registrado com sucesso!
-        </div>
       </div>
       <div id="tabela" class="form pt-0">PEDIDOS REALIZADOS:</div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/validacaoPedido.js" defer></script>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"
+  ></script>
+  <script src="./js/validacaoPedido.js" defer></script>
+  <script src="./js/livro.js" defer></script>
 </html>
