--- a/frontend/private/cadastroUsuario.html
+++ b/frontend/private/cadastroUsuario.html
@@ -15,29 +15,49 @@
       href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/styles/style.css" />
-    <script src="../public/iconEffect.js" defer></script>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script src="iconEffect.js" defer></script>
     <title>Cadastrar Usuario</title>
   </head>
   <body>
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid d-flex justify-content-between">
+      <div class="container-fluid d-flex w-100 justify-content-between">
         <div class="divTopo">
-          <a
-            class="navbar-brand d-flex align-items-center"
-            href="../public/index.html"
+          <a class="navbar-brand d-flex align-items-center" href="./index.html"
             ><img
-              src="../public/assets/reading.png"
+              src="./assets/reading.png"
               style="width: 45px"
               alt="brand do site Livrare"
             />
             <span class="brand ms-2">LIVRARE</span></a
           >
         </div>
-        <div class="collapse navbar-collapse justify-content-end">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item me-2">
-              <a class="nav-link" href="">Solicitar</a>
+              <a class="nav-link" href="./cadastroUsuario.html"
+                >Cadastrar Cliente</a
+              >
+            </li>
+            <li class="nav-item me-2">
+              <a class="nav-link" href="./cadastroPedido.html"
+                >Cadastrar Pedido</a
+              >
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="">Perfil</a>
@@ -46,7 +66,7 @@
               <a id="loginLink" class="nav-link" href="./login.html"
                 ><img
                   id="iconLogout"
-                  src="../public/assets/logout.png"
+                  src="./assets/logout.png"
                   width="20px"
                   alt="sair icon"
                 /><span class="ms-2">Sair</span></a
@@ -56,23 +76,15 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-      <div class="form mb-3">
+    <div id="container" class="container flex-column">
+      <div id="divMenu" class="form mb-3 d-flex flex-column align-items-center">
         <h2 class="pb-3">CADASTRO DE USUÁRIO</h2>
-        <form id="formUsuario" class="row g-3 needs-validation" novalidate>
-          <div class="form-input mb-3 col-md-6">
-            <label for="nomeUsuario" class="form-label">Nome Completo:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="nomeUsuario"
-              pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$"
-              placeholder="Digite seu nome completo."
-              aria-label="nome completo"
-              required
-            />
-            <div class="invalid-feedback">Campo obrigatório.</div>
-          </div>
+        <form
+          method=""
+          id="formUsuario"
+          class="row g-3 needs-validation"
+          novalidate
+        >
           <div class="form-input mb-3 col-md-3">
             <label for="sigla" class="form-label">CPF:</label>
             <input
@@ -83,6 +95,19 @@
               pattern="^\d{3}\.\d{3}\.\d{3}-\d{2}$"
               aria-label="cpf"
               maxlength="14"
+              required
+            />
+            <div class="invalid-feedback">Campo obrigatório.</div>
+          </div>
+          <div class="form-input mb-3 col-md-6">
+            <label for="nomeUsuario" class="form-label">Nome Completo:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nomeUsuario"
+              pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$"
+              placeholder="Digite seu nome completo."
+              aria-label="nome completo"
               required
             />
             <div class="invalid-feedback">Campo obrigatório.</div>
@@ -141,44 +166,30 @@
             <div class="invalid-feedback">O email deve possuir @domínio.</div>
           </div>
           <div class="form-input mb-3 col-md-6">
-            <label for="formPassw" class="form-label">Senha:</label>
+            <label for="senha" class="form-label">Senha:</label>
             <input
               type="password"
               class="form-control"
-              id="formPassw"
+              id="senha"
               placeholder="Digite sua senha."
               required
             />
             <div class="invalid-feedback">Campo obrigatório</div>
           </div>
           <div class="form-input mb-3 col-md-6">
-            <label for="confPassw" class="form-label"
+            <label for="confSenha" class="form-label"
               >Confirme a sua senha:</label
             >
             <input
               type="password"
               class="form-control"
-              id="confPassw"
+              id="confSenha"
               placeholder="Digite a mesma senha."
               required
             />
             <div class="invalid-feedback">As senhas não são iguais</div>
           </div>
-          <div class="g-3 form-check mb-3">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value="agree"
-              id="termos"
-              required
-            />
-            <label class="form-check-label" for="invalidCheck">
-              Eu aceito os <a href="#">Termos e Condições.</a>
-            </label>
-            <div class="invalid-feedback">
-              Você precisa concordar com os termos e condições para continuar.
-            </div>
-          </div>
+
           <div class="col-12">
             <button id="btnCadastrar" class="btn btn-primary" type="submit">
               Cadastrar
@@ -191,21 +202,15 @@
             </button>
           </div>
         </form>
-        <div
-          class="alert alert-success text-center mt-3 visually-hidden"
-          id="alert"
-          role="alert"
-        >
-          Cadastro realizado com sucesso!
-        </div>
       </div>
+      <div id="tabela" class="form pt-0">Clientes Cadastrados:</div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/usuario.js" defer></script>
-    <script src="./js/validacaoUsuario.js" defer></script>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"
+  ></script>
+  <script src="./js/usuario.js" defer></script>
+  <script src="./js/validacaoUsuario.js" defer></script>
 </html>
