--- a/frontend/private/menu.html
+++ b/frontend/private/menu.html
@@ -15,40 +15,57 @@
       href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/styles/style.css" />
-    <script src="../public/iconEffect.js" defer></script>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script src="iconEffect.js" defer></script>
     <title>Menu Usuário</title>
   </head>
   <body>
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid d-flex justify-content-between">
         <div class="divTopo">
-          <a
-            class="navbar-brand d-flex align-items-center"
-            href="../public/index.html"
+          <a class="navbar-brand d-flex align-items-center" href="./index.html"
             ><img
-              src="../public/assets/reading.png"
+              src="./assets/reading.png"
               style="width: 45px"
               alt="brand do site Livrare"
             />
             <span class="brand ms-2">LIVRARE</span></a
           >
         </div>
-        <div class="collapse navbar-collapse justify-content-end">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item me-2">
+              <a class="nav-link" href="./cadastroUsuario.html"
+                >Cadastrar Cliente</a
+              >
+            </li>
+            <li class="nav-item me-2">
               <a class="nav-link" href="./cadastroPedido.html"
-                >Solicitar Livro</a
+                >Cadastrar Pedido</a
               >
             </li>
             <li class="nav-item me-2">
               <a class="nav-link" href="">Perfil</a>
             </li>
             <li class="nav-item me-2 d-flex">
-              <a id="loginLink" class="nav-link" href="../public/login.html"
+              <a id="loginLink" class="nav-link" href="./login.html"
                 ><img
                   id="iconLogout"
-                  src="../public/assets/logout.png"
+                  src="./assets/logout.png"
                   width="20px"
                   alt="sair icon"
                 /><span class="ms-2">Sair</span></a
@@ -62,4 +79,5 @@
       <h1>Bem-vindo!</h1>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
