--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid d-flex justify-content-between">
-        <div class="divTopo">
+      <div class="container-fluid">
+        <div class="divTopo d-flex w-100 justify-content-between">
           <a class="navbar-brand d-flex align-items-center" href="#"
             ><img
               src="./assets/reading.png"
