--- a/frontend/private/cadastroUsuario.html
+++ b/frontend/private/cadastroUsuario.html
@@ -189,12 +189,20 @@
             />
             <div class="invalid-feedback">As senhas não são iguais</div>
           </div>
+          <div id="invalidForm" class="invalid-feedback">
+            *É necessário preencher todos os campos obrigatórios
+          </div>
 
           <div class="col-12">
             <button id="btnCadastrar" class="btn btn-primary" type="submit">
               Cadastrar
             </button>
-            <button id="btnAtualizar" class="btn btn-secondary" type="button">
+            <button
+              id="btnAtualizar"
+              class="btn btn-secondary"
+              type="button"
+              disabled
+            >
               Atualizar
             </button>
             <button id="btnReset" class="btn btn-secondary" type="button">
