estilizando tabelas :lipstick:

--- a/frontend/private/cadastroPedido.html
+++ b/frontend/private/cadastroPedido.html
@@ -182,7 +182,9 @@
           </div>
         </form>
       </div>
-      <div id="tabela" class="form pt-0">PEDIDOS REALIZADOS:</div>
+      <div class="table-responsive" id="tabela" class="form pt-0">
+        PEDIDOS REALIZADOS:
+      </div>
     </div>
   </body>
   <script
