--- a/frontend/private/cadastroUsuario.html
+++ b/frontend/private/cadastroUsuario.html
@@ -211,7 +211,7 @@
           </div>
         </form>
       </div>
-      <div id="tabela" class="form pt-0">Clientes Cadastrados:</div>
+      <div id="tabela" class="table-responsive form pt-0">Clientes Cadastrados:</div>
     </div>
   </body>
   <script
